turned entire App into flex box. Corrected issue with footer not sticking to bottom at extreme widths. Locked about page content to 83vh. Scrolls for y-overflow.

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,16 +1,18 @@
 body {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 100vh !important;
   max-width: 100vw;
 }
 
 main {
   display: flex;
-  min-height: 80vh;
+  /* min-height: 80vh;
   max-height: 95vh;
-  overflow-y: scroll;
-  margin: 10px auto;
+  overflow-y: scroll; */
+  margin: auto 10px;
+  margin-top: 60px;
+  padding-top: auto;
   max-width: 100%;
   font-size: calc(10px + 1vmin);
   background-color: inherit;
@@ -18,6 +20,13 @@ main {
 
 .App {
   background-image: radial-gradient(rgb(247, 247, 247), white);
+  display: flex;
+  flex-flow: row wrap;
+  min-height: 100vh;
+}
+
+.App > * {
+  flex: 1 100%;
 }
 
 #Header {
@@ -29,6 +38,17 @@ main {
   background-color: rgb(150, 40, 170);
   color: white;
   border-bottom: solid black;
+  position: fixed;
+  align-self: flex-start;
+  width: 100%;
+  z-index: 99;
+  max-height: 100%;
+}
+
+footer {
+  display: flex;
+  flex-flow: row wrap;
+  align-content: flex-end;
 }
 
 #Footer {
@@ -36,7 +56,7 @@ main {
   background-color: #fcf4fe;
   width: 100%;
   margin: 0;
-  padding: 2px 4px;
+  padding: 10px;
   border-top: 1px solid lightgrey;
   font-size: 1rem;
 }
@@ -61,9 +81,9 @@ main {
 }
 
 #AboutPageNav {
-  /* min-height: 80vh; */
+  min-height: 83vh;
   height: 100%;
-  max-height: 90vh;
+  max-height: 83vh;
   max-width: 100% !important;
   border-top: solid 1px grey;
   border-left: solid 1px grey;
@@ -71,9 +91,9 @@ main {
 }
 
 .content {
-  min-height: 100%;
-  /* max-height: 88vh;
-  overflow-y: scroll; */
+  max-height: 83vh;
+  /* max-height: 88vh; */
+  overflow-y: scroll;
   max-width: 100%;
   border-top: solid 1px grey;
   padding: 1rem;
@@ -198,6 +218,8 @@ main {
   .content {
     border: 0;
     max-height: 100%;
+    margin: 0;
+    padding: 0;
   }
 
   .skill-card-col {
